# fuzzy-membership-kit

./: .gitignore  CITATION.cff  CODEX_TASK.md  LICENSE  MANIFEST.json  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: diagnostics.md  diagnostics_ja.md  implementation.md  implementation_ja.md  index.md  paper1_outline.md  paper1_outline_ja.md  paper_snippet.md  repository_to_paper_map.md  repository_to_paper_map_ja.md  reviewer_notes.md  theory.md  theory_ja.md  warping_framework.md  warping_framework_ja.md
examples/: basic_usage.py  from_config.py
examples/configs/: emotion_vas_0_100.yaml  number_large_umano2025.json  paper1_warping_comparison.yaml
results/: validation_report.json
scripts/: generate_manifest.py  reproduce_paper1_diagnostics.py  validate_config.py
src/fuzzymf/: __init__.py  anchors.py  core.py  diagnostics.py  focus.py  io.py  validation.py  warping.py
src/fuzzymf/cli/: plot.py
tests/: test_anchors.py  test_core.py  test_diagnostics.py  test_focus.py  test_io.py  test_warping.py
